remove shortflag -m for sourcemap

--- a/man/asciidoctor.adoc
+++ b/man/asciidoctor.adoc
@@ -123,9 +123,6 @@ Similarly, if there is a subfolder in the resulting template directory that matc
 This option may be specified more than once.
 Matching templates found in subsequent directories override ones previously discovered.
 
-*-m, --sourcemap*::
-  Enable the sourcemap option. This allows converters and other extensions to access source locations.
-
 === Processing Information
 
 *--failure-level*=_LEVEL_::
@@ -146,6 +143,9 @@ Matching templates found in subsequent directories override ones previously disc
 
 *-t, --timings*::
   Print timings report to stderr (time to read, parse, and convert).
+
+*--sourcemap*::
+    Enable the sourcemap option. This allows converters and other extensions to access source locations.
 
 === Program Information
 
