--- a/man/asciidoctor.adoc
+++ b/man/asciidoctor.adoc
@@ -145,7 +145,8 @@ Matching templates found in subsequent directories override ones previously disc
   Print timings report to stderr (time to read, parse, and convert).
 
 *--sourcemap*::
-    Enable the sourcemap option. This allows converters and other extensions to access source locations.
+    Enable the sourcemap option. Keeps track of the file and line number for each parsed block.
+    (Useful for tooling applications where the association between the converted output and the source file is important).
 
 === Program Information
 
